Pet: Round the ternary normalized percentages

--- a/www/app/spot/petrology/minerals/minerals-tab.directive.html
+++ b/www/app/spot/petrology/minerals/minerals-tab.directive.html
@@ -79,11 +79,11 @@
         <br>
         QAP Sum = {{vmChild.ternary.qap_sum}}
         <br>
-        Normalized Q value = {{(vmChild.ternary.q / vmChild.ternary.qap_sum) * 100}}
+        Normalized Q value = {{(vmChild.ternary.q / vmChild.ternary.qap_sum) * 100 | number: 0}}
         <br>
-        Normalized A value = {{(vmChild.ternary.a / vmChild.ternary.qap_sum) * 100}}
+        Normalized A value = {{(vmChild.ternary.a / vmChild.ternary.qap_sum) * 100 | number: 0}}
         <br>
-        Normalized P value = {{(vmChild.ternary.p / vmChild.ternary.qap_sum) * 100}}
+        Normalized P value = {{(vmChild.ternary.p / vmChild.ternary.qap_sum) * 100 | number: 0}}
       </div>
     </div>
     <div
@@ -100,11 +100,11 @@
         <br>
         APF Sum = {{vmChild.ternary.apf_sum}}
         <br>
-        Normalized A value = {{(vmChild.ternary.a / vmChild.ternary.apf_sum) * 100}}
+        Normalized A value = {{(vmChild.ternary.a / vmChild.ternary.apf_sum) * 100 | number: 0}}
         <br>
-        Normalized P value = {{(vmChild.ternary.p / vmChild.ternary.apf_sum) * 100}}
+        Normalized P value = {{(vmChild.ternary.p / vmChild.ternary.apf_sum) * 100 | number: 0}}
         <br>
-        Normalized F value = {{(vmChild.ternary.f / vmChild.ternary.apf_sum) * 100}}
+        Normalized F value = {{(vmChild.ternary.f / vmChild.ternary.apf_sum) * 100 | number: 0}}
       </div>
     </div>
     <div
@@ -121,11 +121,11 @@
         <br>
         OOC Sum = {{vmChild.ternary.ooc_sum}}
         <br>
-        Normalized Ol value = {{(vmChild.ternary.ol / vmChild.ternary.ooc_sum) * 100}}
+        Normalized Ol value = {{(vmChild.ternary.ol / vmChild.ternary.ooc_sum) * 100 | number: 0}}
         <br>
-        Normalized Opx value = {{(vmChild.ternary.opx / vmChild.ternary.ooc_sum) * 100}}
+        Normalized Opx value = {{(vmChild.ternary.opx / vmChild.ternary.ooc_sum) * 100 | number: 0}}
         <br>
-        Normalized CPx value = {{(vmChild.ternary.cpx / vmChild.ternary.ooc_sum) * 100}}
+        Normalized CPx value = {{(vmChild.ternary.cpx / vmChild.ternary.ooc_sum) * 100 | number: 0}}
       </div>
     </div>
     <div
@@ -142,11 +142,11 @@
         <br>
         OCP Sum = {{vmChild.ternary.ocp_sum}}
         <br>
-        Normalized Ol value = {{(vmChild.ternary.ol / vmChild.ternary.ocp_sum) * 100}}
+        Normalized Ol value = {{(vmChild.ternary.ol / vmChild.ternary.ocp_sum) * 100 | number: 0}}
         <br>
-        Normalized Cpx value = {{(vmChild.ternary.cpx / vmChild.ternary.ocp_sum) * 100}}
+        Normalized Cpx value = {{(vmChild.ternary.cpx / vmChild.ternary.ocp_sum) * 100 | number: 0}}
         <br>
-        Normalized Plag value = {{(vmChild.ternary.p / vmChild.ternary.ocp_sum) * 100}}
+        Normalized Plag value = {{(vmChild.ternary.p / vmChild.ternary.ocp_sum) * 100 | number: 0}}
       </div>
     </div>
     <div
@@ -163,11 +163,11 @@
         <br>
         OPH Sum = {{vmChild.ternary.oph_sum}}
         <br>
-        Normalized Ol value = {{(vmChild.ternary.ol / vmChild.ternary.oph_sum) * 100}}
+        Normalized Ol value = {{(vmChild.ternary.ol / vmChild.ternary.oph_sum) * 100 | number: 0}}
         <br>
-        Normalized Ppx value = {{(vmChild.ternary.pyx / vmChild.ternary.oph_sum) * 100}}
+        Normalized Ppx value = {{(vmChild.ternary.pyx / vmChild.ternary.oph_sum) * 100 | number: 0}}
         <br>
-        Normalized Hbl value = {{(vmChild.ternary.hbl / vmChild.ternary.oph_sum) * 100}}
+        Normalized Hbl value = {{(vmChild.ternary.hbl / vmChild.ternary.oph_sum) * 100 | number: 0}}
       </div>
     </div>
   </div>
