Spot Notes: Added page for Spot Notes

--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -109,6 +109,7 @@
     <script src="app/spot/micro/experimental-set-up/experimental-set-up-tab.controller.js"></script>
     <script src="app/spot/minerals/minerals-tab.controller.js"></script>
     <script src="app/spot/nesting/nesting-tab.controller.js"></script>
+    <script src="app/spot/notes/notes-tab.controller.js"></script>
     <script src="app/spot/orientations/orientations-tab.controller.js"></script>
     <script src="app/spot/other-features/other-features-tab.controller.js"></script>
     <script src="app/spot/petrology/basics/basics-tab.controller.js"></script>
@@ -192,6 +193,7 @@
     <script src="app/spot/minerals/minerals-choices.directive.js"></script>
     <script src="app/spot/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
+    <script src="app/spot/notes/notes-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
     <script src="app/spot/petrology/basics/basics-tab.directive.js"></script>
