Spot/Notes: fixed content scrolling, disappearing text, and added border

--- a/www/app/spot/notes/notes-tab.directive.html
+++ b/www/app/spot/notes/notes-tab.directive.html
@@ -1,3 +1,6 @@
-<div class="padding spot-notes-container" >
-  <textarea class='spot-notes' placeholder='Notes about this Spot' ng-model='vm.data.notes'></textarea>
-</div>
+    <div class="padding spot-notes-container" >
+      <label>
+        <textarea class="padding spot-notes" rows="50" placeholder='Notes about this Spot' ng-model='vm.data.notes'></textarea>
+      </label>
+    </div>
+
