--- a/www/app/spot/notes/notes-tab.html
+++ b/www/app/spot/notes/notes-tab.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-content>
+  <ion-content scroll="false">
     <strabo-notes-tab-directive></strabo-notes-tab-directive>
   </ion-content>
 </ion-view>
