Minerals: Added Mineral Glossary

--- a/www/app/spot/petrology/minerals/minerals-tab.directive.html
+++ b/www/app/spot/petrology/minerals/minerals-tab.directive.html
@@ -15,6 +15,10 @@
       <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Add a Mineral</span>
     </button>
+    <button ng-click='vmChild.glossaryModal.show();' class='button button-clear button-positive'>
+      <i class='icon ion-information-circled'></i>
+      <span class='button-text-big'>View Mineral Glossary</span>
+    </button>
     <div class="padding" ng-show="!vm.spot.properties.pet.minerals.mineralogy">
       There are no minerals at this Spot.
     </div>
