--- a/www/index.html
+++ b/www/index.html
@@ -133,6 +133,7 @@
     <script src="app/shared/livedb.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/images/image.factory.js"></script>
+    <script src="app/spot/petrology/minerals/minerals.factory.js"></script>
     <script src="app/spot/minerals/minerals.factory.js"></script>
     <script src="app/spot/spot/spot.factory.js"></script>
     <script src="app/spots/spots.factory.js"></script>
