Pet Mineral Glossary updates

--- a/www/app/spot/petrology/minerals/minerals-tab.directive.html
+++ b/www/app/spot/petrology/minerals/minerals-tab.directive.html
@@ -15,7 +15,7 @@
       <i class='icon ion-plus-circled'></i>
       <span class='button-text-big'>Add a Mineral</span>
     </button>
-    <button ng-click='vmChild.glossaryModal.show();' class='button button-clear button-positive'>
+    <button ng-click='vmChild.showMineralGlossary()' class='button button-clear button-positive'>
       <i class='icon ion-information-circled'></i>
       <span class='button-text-big'>View Mineral Glossary</span>
     </button>
