--- a/www/app/spot/petrology/minerals/minerals-glossary-modal.html
+++ b/www/app/spot/petrology/minerals/minerals-glossary-modal.html
@@ -1,50 +1,76 @@
 <ion-modal-view class="minerals-modals">
-    <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-      <h1 class='title'>Minerals Glossary</h1>
-      <div class='buttons'>
-        <button class='icon ion-close-round close-modal-button' ng-click='vmChild.glossaryModal.hide()'>
-        </button>
-      </div>
-    </ion-header-bar>
-    <ion-content>
-      <div class="padding" ng-repeat='mineral in vmChild.glossary | orderBy:"Name" track by $index'>
-        <div class="mineral-info-display">
-          <div class="row">
-            <span class="mineral-title">Mineral:</span>
-            {{ mineral.Mineral }}
+  <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
+    <button class='button button-icon icon ion-arrow-left-c' ng-click='vmChild.setGlossaryMineral({})'
+            ng-hide='vmChild.isShowMineralGlossaryIndex'>
+    </button>
+    <h1 class='title'>Minerals Glossary</h1>
+    <div class='buttons'>
+      <button class='icon ion-close-round close-modal-button' ng-click='vmChild.glossaryModal.hide()'>
+      </button>
+    </div>
+  </ion-header-bar>
+  <ion-content>
+    <div class="padding">
+      <div class="row" ng-show='vmChild.isShowMineralGlossaryIndex'>
+        <div class="col">
+          <div class='padding-bottom'
+               ng-repeat='mineral in vmChild.glossary | limitTo:31:0 | orderBy:"Name" track by $index'
+               ng-click="vmChild.setGlossaryMineral(mineral)">
+            {{mineral.Mineral}}
           </div>
-          <div class="row">
-            <span class="mineral-title">Formula:</span>
-            {{ mineral.Formula }}
+        </div>
+        <div class="col">
+          <div class='padding-bottom'
+               ng-repeat='mineral in vmChild.glossary | limitTo:30:31 | orderBy:"Name" track by $index'
+               ng-click="vmChild.setGlossaryMineral(mineral)">
+            {{mineral.Mineral}}
           </div>
-          <div class="row">
-            <span class="mineral-title">Crystal System:</span>
-            {{ mineral["Crystal System"] }}
-          </div>
-          <div class="row">
-            <span class="mineral-title">Hardness:</span>
-            {{ mineral.Hardness }}
-          </div>
-          <div class="row">
-            <span class="mineral-title">Distinguishing Features:</span>
-            {{ mineral['Distinguishing Features'] }}
-          </div>
-          <div class="row">
-            <span class="mineral-title"> Occurrence:</span>
-            {{ mineral.Occurrence }}
-          </div>
-          <div class="row">
-            <span class="mineral-title"> Associated Minerals:</span>
-            {{ mineral['Associated Minerals'] }}
-          </div><br>
-          <div class="row">
-            <!-- <div class=" mineral-title"><i name="icon ion-globe"></i></div>          -->
-            <a class="" id="mineral-link" ng-href="{{mineral['mindat.org link']}}" target="blank">
-              <i class="web-icon icon ion-android-globe"></i>
-              Click here for more mineral information on {{mineral.Mineral}} from Mindat.org
-            </a>
+        </div>
+        <div class="col">
+          <div class='padding-bottom'
+               ng-repeat='mineral in vmChild.glossary | limitTo:35:61 | orderBy:"Name" track by $index'
+               ng-click="vmChild.setGlossaryMineral(mineral)">
+            {{mineral.Mineral}}
           </div>
         </div>
       </div>
-    </ion-content>
-  </ion-modal-view>
+      <div class="mineral-info-display" ng-hide='vmChild.isShowMineralGlossaryIndex'>
+        <div class="row">
+          <span class="mineral-title">Mineral:</span>
+          {{ vmChild.glossaryMineral.Mineral }}
+        </div>
+        <div class="row">
+          <span class="mineral-title">Formula:</span>
+          {{ vmChild.glossaryMineral.Formula }}
+        </div>
+        <div class="row">
+          <span class="mineral-title">Crystal System:</span>
+          {{ vmChild.glossaryMineral["Crystal System"] }}
+        </div>
+        <div class="row">
+          <span class="mineral-title">Hardness:</span>
+          {{ vmChild.glossaryMineral.Hardness }}
+        </div>
+        <div class="row">
+          <span class="mineral-title">Distinguishing Features:</span>
+          {{ vmChild.glossaryMineral['Distinguishing Features'] }}
+        </div>
+        <div class="row">
+          <span class="mineral-title"> Occurrence:</span>
+          {{ vmChild.glossaryMineral.Occurrence }}
+        </div>
+        <div class="row">
+          <span class="mineral-title"> Associated Minerals:</span>
+          {{ vmChild.glossaryMineral['Associated Minerals'] }}
+        </div>
+        <div class="row">
+          <!-- <div class=" mineral-title"><i name="icon ion-globe"></i></div>          -->
+          <a class="" id="mineral-link" ng-href="{{vmChild.glossaryMineral['mindat.org link']}}" target="blank">
+            <i class="web-icon icon ion-android-globe"></i>
+            Click here for more mineral information on {{vmChild.glossaryMineral.Mineral}} from Mindat.org
+          </a>
+        </div>
+      </div>
+    </div>
+  </ion-content>
+</ion-modal-view>
