GPS: Added gps accuracy to Spot

--- a/www/app/spot/spot-tab/spot-tab.directive.html
+++ b/www/app/spot/spot-tab/spot-tab.directive.html
@@ -123,9 +123,18 @@
       </div>
 
       <ion-input class='item item-input item-stacked-label item-text-wrap'>
+        <ion-label>GPS Accuracy (m)
+          <button class='button button-small button-icon ion-information-circled strabo-field-info-button'
+                  ng-click='form.showFieldInfo({"label": "GPS Accuracy (m)", "hint": "Accuracy level of the latitude and longitude coordinates in meters."})'></button>
+        </ion-label>
+        <input type='number' placeholder='Height of the position in meters above the ellipsoid of the earth.'
+               ng-model='vm.spot.properties.gps_accuracy'>
+      </ion-input>
+
+      <ion-input class='item item-input item-stacked-label item-text-wrap'>
         <ion-label>Altitude (m)
           <button class='button button-small button-icon ion-information-circled strabo-field-info-button'
-                  ng-click='form.showFieldInfo({"label": "Altitude (m)", "hint": "Height of the position in meters above the ellipsoid of the earth.."})'></button>
+                  ng-click='form.showFieldInfo({"label": "Altitude (m)", "hint": "Height of the position in meters above the ellipsoid of the earth."})'></button>
         </ion-label>
         <input type='number' placeholder='Height of the position in meters above the ellipsoid of the earth.'
                ng-model='vm.spot.properties.altitude'>
