--- a/www/app/spot/notes/notes-tab.directive.html
+++ b/www/app/spot/notes/notes-tab.directive.html
@@ -1,6 +1,4 @@
-    <div class="padding spot-notes-container" >
-      <label>
-        <textarea class="padding spot-notes" rows="50" placeholder='Notes about this Spot' ng-model='vm.data.notes'></textarea>
-      </label>
-    </div>
+  <div class="padding">
+      <textarea class="padding spot-notes" rows="50" placeholder='Notes about this Spot' ng-model='vm.data.notes'></textarea>
+  </div>
 
