Fixed text placeholder for GPS Accuracy field.

--- a/www/app/spot/spot-tab/spot-tab.directive.html
+++ b/www/app/spot/spot-tab/spot-tab.directive.html
@@ -127,7 +127,7 @@
           <button class='button button-small button-icon ion-information-circled strabo-field-info-button'
                   ng-click='form.showFieldInfo({"label": "GPS Accuracy (m)", "hint": "Accuracy level of the latitude and longitude coordinates in meters."})'></button>
         </ion-label>
-        <input type='number' placeholder='Height of the position in meters above the ellipsoid of the earth.'
+        <input type='number' placeholder='Accuracy level of the latitude and longitude coordinates in meters.'
                ng-model='vm.spot.properties.gps_accuracy'>
       </ion-input>
 
