Sketch: Added sketching

--- a/www/app/spot/images/images-tab.html
+++ b/www/app/spot/images/images-tab.html
@@ -10,6 +10,11 @@
       <i class='icon ion-image'></i>
       <span class='button-text-big'>Add Image From File</span>
     </button>
+    <button ng-click='vm.drawSketch()'
+            class='button button-clear button-positive'>
+      <i class='icon ion-edit'></i>
+      <span class='button-text-big'>Sketch</span>
+    </button>
     <strabo-images-tab-directive></strabo-images-tab-directive>
   </ion-content>
 </ion-view>
