--- a/www/app/spot/spot/spot.web.html
+++ b/www/app/spot/spot/spot.web.html
@@ -7,6 +7,7 @@
   </div>
   <div class="subheader-right">
     <button ng-click='vm.viewMap()' class='button button-icon icon ion-map'></button>
+    <button ng-click='vm.drawSketch()' class='button button-icon icon ion-edit'></button>
     <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </div>
   <div class="text-center strabo-subheader-text">{{ vm.spotTitle }}</div>
