Sketch: Added eraser

--- a/www/app/spot/images/sketch-modal.html
+++ b/www/app/spot/images/sketch-modal.html
@@ -11,6 +11,7 @@
     </div>
   </ion-header-bar>
   <ion-content class='has-header' id='canvasContent' scroll='false'>
-    <canvas id='myCanvas'></canvas>
+    <canvas style="z-index:1" id='myCanvas'></canvas>
+    <div id='eraserIcon' class="eraser-icon" ng-click='vm.eraseSketch()'></div>
   </ion-content>
 </ion-modal-view>
