Image: Edit an image with sketch

--- a/www/app/spot/images/image-properties-modal.html
+++ b/www/app/spot/images/image-properties-modal.html
@@ -7,6 +7,10 @@
     <div class="buttons">
       <button ng-hide='vmChild.isWeb()' ng-click='vmChild.reattachImage();'
               class='button button-icon icon ion-link'></button>
+      <button ng-click='vmChild.editImage()'
+              class='button button-clear'>
+        <i class='icon ion-edit'></i>
+      </button>
       <button ng-click='vmChild.deleteImage();'
               class='button button-icon icon ion-trash-b'></button>
       <button class='icon ion-close-round close-modal-button'
