Image Sketching: Make image for sketching scrollable when image larger than screen area

--- a/www/app/spot/images/sketch-modal.html
+++ b/www/app/spot/images/sketch-modal.html
@@ -10,8 +10,10 @@
       </button>
     </div>
   </ion-header-bar>
-  <ion-content class='has-header' id='canvasContent' scroll='false'>
-    <canvas style="z-index:1" id='myCanvas'></canvas>
-    <div id='eraserIcon' class="eraser-icon" ng-click='vm.eraseSketch()'></div>
+  <ion-content class='has-header' id='canvasContent' scroll="false">
+    <div direction="xy" class="scrollableSketch" id="canvasParent">
+      <canvas style="z-index:1;" id='myCanvas'></canvas>
+      <div id='eraserIcon' class="eraser-icon" ng-click='vm.eraseSketch()'></div>
+    </div>
   </ion-content>
 </ion-modal-view>
