--- a/www/app/spot/images/images-tab.directive.html
+++ b/www/app/spot/images/images-tab.directive.html
@@ -16,7 +16,7 @@
   </div>
   <div class='strabo-image'>
     <div class='row'
-         ng-repeat='image in vm.spot.properties.images | filter: !!vmChild.filterSelectedType && {image_type: vmChild.filterSelectedType} track by image.id'>
+         ng-repeat='image in vm.spot.properties.images | filter: (!!vmChild.filterSelectedType || undefined) && {image_type: vmChild.filterSelectedType} track by image.id'>
       <div class='col image-col'>
         <img class="strabo-small-thumbnail" ng-src='{{ vmChild.getImageSrc(image.id) }}'
              ng-click='vmChild.showImages($index)'/>
