--- a/www/app/spot/sed/structures/structures-tab.directive.html
+++ b/www/app/spot/sed/structures/structures-tab.directive.html
@@ -1,13 +1,13 @@
 <div>
   <div class='button-bar'>
-    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'physical_structures'}"
-            ng-click='vmChild.switchForm("physical_structures")'>Physical</button>
-    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'biogenic_structures'}"
-            ng-click='vmChild.switchForm("biogenic_structures")'>Biogenic</button>
-    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'chemogenic_structures'}"
-            ng-click='vmChild.switchForm("chemogenic_structures")'>Chemogenic</button>
-    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'pedogenic_structures'}"
-            ng-click='vmChild.switchForm("pedogenic_structures")'>Pedogenic</button>
+    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_physical'}"
+            ng-click='vmChild.switchForm("structures_physical")'>Physical</button>
+    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_biogenic'}"
+            ng-click='vmChild.switchForm("structures_biogenic")'>Biogenic</button>
+    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_chemogenic'}"
+            ng-click='vmChild.switchForm("structures_chemogenic")'>Chemogenic</button>
+    <button class='button' ng-class="{'button-positive': vmChild.structuresForm === 'structures_pedogenic'}"
+            ng-click='vmChild.switchForm("structures_pedogenic")'>Pedogenic</button>
   </div>
   <form name='straboForm' novalidate=''>
     <auto-fields/>
