Sed: Added Interval tab

--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -115,6 +115,7 @@
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.controller.js"></script>
+    <script src="app/spot/sed/interval/interval-tab.controller.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
     <script src="app/spot/sed/structures/structures-tab.controller.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.controller.js"></script>
@@ -194,6 +195,7 @@
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.directive.js"></script>
+    <script src="app/spot/sed/interval/interval-tab.directive.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
     <script src="app/spot/sed/structures/structures-tab.directive.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
