--- a/www/index.html
+++ b/www/index.html
@@ -102,6 +102,7 @@
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.controller.js"></script>
+    <script src="app/spot/sed/interval/interval-tab.controller.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
     <script src="app/spot/sed/structures/structures-tab.controller.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.controller.js"></script>
@@ -180,6 +181,7 @@
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.directive.js"></script>
+    <script src="app/spot/sed/interval/interval-tab.directive.js"></script>
     <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
     <script src="app/spot/sed/structures/structures-tab.directive.js"></script>
     <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
