--- a/www/app/spots/spots-list-tabs-detail.directive.html
+++ b/www/app/spots/spots-list-tabs-detail.directive.html
@@ -7,7 +7,8 @@
   <span ng-if='spot.properties.other_features' class='spot-tabs-on other-features-on'>Other Features</span>
   <span ng-if='vm.hasRelationships(spot.properties.id)' class='spot-tabs-on relationships-on'>Relationships</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.strat_section' class='spot-tabs-on strat-section-on'>Strat Section</span>
-  <span ng-if='spot.properties.sed && spot.properties.sed.lithologies' class='spot-tabs-on lithologies-on'>Lithologies</span>
+  <span ng-if='spot.properties.sed && spot.properties.sed.interval' class='spot-tabs-on sed-interval-on'>Sed Interval</span>
+  <span ng-if='spot.properties.sed && spot.properties.sed.lithologies' class='spot-tabs-on sed-lithologies-on'>Sed Lithologies</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.structures' class='spot-tabs-on sed-structures-on'>Sed Structures</span>
   <span ng-if='spot.properties.sed && spot.properties.sed.interpretations' class='spot-tabs-on sed-interpretations-on'>Sed Interpretations</span>
 </span>
